timing_180822: Fixed perf_mod.F90 bug that prevents PAPI derived events 
               from being recognized.
               [Patrick Worley]
timing_180731: Refactored implementation of append/write modes;
               collected and output "on" events for global statistics
               [Patrick Worley]
timing_180730: Added support for setting GPTLmaxthreads. Cleaned up white space.
               Added SEQUENTIAL to fortran open, to avoid problems on some systems.
               Added timing overhead measurement to perf_mod. Fixed errors in
               f_wrappers.c in definition of gptlpr_query_append and 
               gptlpr_XXX_write.
               [Patrick Worley (some from Jim Rosinksi)]
timing_180403: Added GPTLstartstop_val(f) to gptl.h, to provide explicit
               typing and eliminate compile-time warning for some compilers.
               Also do not define the CPP tokens HAVE_COMM_F2C and 
               HAVE_GETTIMEOFDAY in private.h if they have already been
               defined, also eliminating compile-time warnings.
               [Patrick Worley]
timing_171028: Backported GPTLstartstop_val from a more recent version
               of GPTL, added a callcount parameter, and renamed it
               GPTLstartstop_vals. Also added a version for non-null
               terminated timing event names (GPTLstartstop_valsf).
               Added t_startstop_valsf to perf_mod. Also replaced
               all strncpy calls in f_wrapper.c, just to be safe.
               [Patrick Worley (but primarily Jim Rosinksi)]
timing_171027: Mitigated against nonmonotonic timing calls by
               setting negative deltas to zero in gptl.c .
               [Patrick Worley]
timing_160816: Added quotes to timing event names in t_startf and t_stopf
               before calling GPTL routines.
               [Patrick Worley and Sean Patrick Santos]
timing_161207: Replaced strncpy and snprintf where applied to